# rsp-ruination

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  mips_instruction_decode.h  n64_rsp_bus.h  rsp-ruination.c  rsp.S  rsp_funct.h  rsp_rom.h  rsp_state.c  rsp_state.h  rsp_test_ucode.S  rsp_types.h  rsp_vector_instructions.c  testcases.h  util.h
.github/workflows/: build.yml
